# disjoint-synthetic-data-generation

./: .gitignore  00_metrics_affected.ipynb  00_tutorial.ipynb  01_exp_introduction.ipynb  01_same_model_partitions.ipynb  02_exp_scaling.ipynb  02_validated_joins.ipynb  03A_specified_splits_supplement.ipynb  03_specified_splits.ipynb  04_joining_validator.ipynb  05_dgms_on_fragmented_data.ipynb  A1_metrics_affected.ipynb  README.md  datasynthesizer_temp.csv  make_data.py  pyproject.toml  pytest.ini  test.py
.github/workflows/: doctests.yml  release.yml
_old_preliminary_exp/: 01_exp_introduction.ipynb  SE_benchmark_ranking_1731572892.csv  SE_benchmark_results_1731572892.csv  joining_exp.ipynb
_old_preliminary_exp/datasets/: diabetes_test.csv  diabetes_test_A.csv  diabetes_test_B.csv  diabetes_train.csv
datasets/: breast_cancer_ctgan.csv  breast_cancer_datasynthesizer.csv  breast_cancer_dgms_random.csv  breast_cancer_test.csv  breast_cancer_train.csv  cervical_cancer_train.csv  hepatitis_test.csv  hepatitis_train.csv
disjoint_generative_model/: disjoint_model.py
disjoint_generative_model/utils/: dataset_manager.py  generative_model_adapters.py  join_validator.py  joining_strategies.py  joining_validator.py  plots.py
disjoint_generative_model/utils/subprocess/: synthpop_subprocess.R
experiments/: 01_exp_introduction.ipynb
experiments/auxiliaries/: 01_same_model_parts_results.py  02_correlation_plot.py  02_validator_improves_utility.py  03_extended_results.py  03_results.py  04_threshold_experiment.py  04_threshold_results.py  04_validator_experiment.py  exp_repeater.py  parallel_time_utility_privacy_exp.py  plotting.py  results_presentation.py  validator_mlp.py
experiments/datasets/: alzheimers_test.csv  alzheimers_train.csv  breast_cancer_synthpop.csv  breast_cancer_test.csv  breast_cancer_train.csv  cervical_cancer_test.csv  cervical_cancer_train.csv  dataset_LICENCE  derm_test.csv  derm_train.csv  diabetic_mellitus_test.csv  diabetic_mellitus_train.csv  heart_test.csv  heart_train.csv  hepatitis_test.csv  hepatitis_train.csv  kidney_disease_test.csv  kidney_disease_train.csv  prepare_datasets.py  stroke_test.csv  stroke_train.csv
experiments/results/: 01_utility_privacy_adaptive.csv  01_utility_privacy_concat.csv  01_utility_privacy_concat_dm.csv  01_utility_privacy_validate.csv  01_utility_privacy_validate_dm.csv  02_correlation_tradeoff.csv  02_validator_vs_concat.csv  04_threshold_results.csv  04_validator_models.csv  time_privacy_utility_ctgan.csv  time_privacy_utility_datasynthesizer.csv  time_privacy_utility_synthpop.csv
experiments/results/01_breast_cancer_case_study/: ctgan_baseline.csv  datasynthesizer_2_partitions_concat.csv  synthpop_2_partitions_concat.csv  synthpop_3_partitions_valid.csv
experiments/results/03_hepatitis_case_study/: results.tex  (+19 more)
src/disjoint_generation/: disjoint_model.py
tests/: dummy_train.csv  requirements.txt
(+90 files in other folders)
