[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "disjoint-gms"
version = "0.1.0"
authors = [{name="Anton D. Lautrup"}]
dependencies = [
    "numpy",
    "pandas",
    "scipy ~= 1.10.1",
    "scikit-learn >= 1.2",
    "syntheval >= 1.5.1",
    "synthcity >= 0.2.11",
    "DataSynthesizer ~= 0.1.13",
    "pytest-doctest-ellipsis-markers",
]
description = "Exploring the Effects of Disjoint Generation of Synthetic Tabular Data."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.hatch.build]
include = [
    'disjoint_generative_model',
    'LICENSE',
    'README.md',
]
[tool.hatch.build.targets.wheel]
packages = ["disjoint_generative_model"]
