[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "disjointgms"
version = "0.1.0"
authors = [{name="Anton D. Lautrup"}]
dependencies = [
    "numpy",
    "pandas",
    "scipy >= 1.10.1",
    "scikit-learn >= 1.2",
    "syntheval >= 1.6.0",
    "synthcity >= 0.2.11",
    "DataSynthesizer ~= 0.1.13",
    "pytest-doctest-ellipsis-markers",
    "pyod",
]
description = "Exploring the Effects of Disjoint Generation of Synthetic Tabular Data."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.hatch.build]
include = [
    'disjoint_generative_model',
    'LICENSE',
    'README.md',
]
[tool.hatch.build.targets.wheel]
packages = ["disjoint_generative_model"]

[tool.poetry.dependencies]
python = "^3.8"
thinc = "^8.1.13"  # Update to the latest version
cython = ">=0.29.21,<3.0.0"  # Specify a compatible version range